# digital-polymerase

./: LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: conversion_report_8t5o-HH-typeI-111mer-full_auto_004A.md  prototype_006B4_run_summary.md  prototype_007A_run_summary.md  prototype_008A1_run_summary.md
benchmarks/ana_fragment_scaling/: README.md  benchmark_003_ana_fragment_scaling_notes.md
benchmarks/cena_scaling/: benchmark_007_cena_scaling_notes.md  prototype_004A_run_summary.md
benchmarks/fana_fragment_scaling/: README.md  benchmark_004_fana_chain_preserving_scaling_notes.md
benchmarks/gna_scaling/: benchmark_010_gna_scaling_notes.md  conversion_report_8t5o-HH-typeI-111mer-full_auto_007A.md
benchmarks/hh_ribozyme_8t5o/: README.md
benchmarks/hna_template_regression/: README.md  benchmark_005_hna_template_regression_notes.md
benchmarks/pna_scaling/: conversion_report_8t5o-HH-typeI-111mer-full_auto_008A1.md
benchmarks/tna_scaling/: benchmark_009_tna_scaling_notes.md
benchmarks/xyna_scaling/: benchmark_008_xyna_scaling_notes.md  prototype_005A_run_summary.md
docs/: core_package.md  fana_controlled_minimization.md  fana_external_parameter_gate.md  fana_level4_readiness.md  prompt_protocol.md  prototype_001B_rna_to_hna_template_guided.md  prototype_001B_run_summary.md  prototype_001_rna_to_hna.md  prototype_002A_rna_to_ana_fragment_guided.md  prototype_003A_run_summary.md  prototype_004A_rna_to_cena_template_guided.md  prototype_005A_rna_to_xyna_fragment_guided.md  prototype_006B_rna_to_tna_linkage_optimized.md  prototype_007A_rna_to_gna_linkage_optimized.md
examples/rna_to_hna_8mer/: PDB_source.md  README.md
prototypes/: rna_to_hna_template_based.py
src/digital_polymerase/: __init__.py
src/digital_polymerase/converters/: README.md  (+3 more)
tests/: test_core_smoke.py  test_fana_campaign.py  test_fana_parameter_gate.py  test_fana_physical_readiness.py  test_rna_to_fana.py
(+102 files in other folders)
