[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-polymerase-core"
version = "0.1.0"
description = "Reusable core modules for Digital Polymerase nucleic-acid/XNA candidate reconstruction."
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
